# bitmap_image_generator

./: .gitignore  CMakeLists.txt  README.md
doc/: config
examples/api/: CMakeLists.txt  main.cpp
examples/black_and_white/: CMakeLists.txt  main.cpp
examples/chunk/: CMakeLists.txt  main.cpp
examples/chunk_speed/: CMakeLists.txt  main.cpp
examples/circular_counting_buffer/: CMakeLists.txt  main.cpp
examples/image_task_manager/: CMakeLists.txt  main.cpp
examples/line/: CMakeLists.txt  main.cpp
examples/queue_processor/: CMakeLists.txt  main.cpp
examples/simple_image/: CMakeLists.txt  main.cpp
include/algorithms/: algorithm.h  bresenham.h  bresenham_normal.h  bresenham_normal_parameters.h  line_algorithm.h  line_parameters.h  parameters.h  point_collection.h
include/api/: api.h
include/chunk/: chunk.h  chunk_stack.h  image_chunk.h
include/circular_counter_buffer/: circular_counter_buffer.h  point_circular_counter_buffer.h
include/colors/: color.h  colors.h
include/exception/: exception.h
include/image/: bmp_file_header.h  bmp_header.h  bmp_header_size.h  bmp_info_header.h  image.h
include/image_chunk/: chunk.h
include/image_objects/: drawable_object.h  drawable_objects.h  drawable_objects_queue.h  line.h  pixel.h  pixel_set.h  point.h  point_set.h
include/image_processor/: image_processor.h
include/managers/: image_task_manager.h  manager_task.h  task.h
include/parameters/: bresenham_normal_parameters.h  image_task_manager_preparator_parameters.h  line_parameters.h  manager_task_parameters.h  parameters.h
include/preparators/: image_task_manager_preparator.h
include/processors/: image_processor.h  queue_processor.h  (+1 more)
src/: CMakeLists.txt
(+37 files in other folders)
